<resources>
    <string name="app_name">Receh</string>
    <string name="nama">Receh</string>
    <string name="notif">notif</string>
    <string name="nameaccount">Nama akun</string>
    <string name="bal">Sisa Saldo</string>
    <string name="activebal">Rp 0</string>
    <string name="choose">Pilih Gambar</string>
    <string name="income">Pendapatan Bonus</string>
    <string name="incomebonus">Rp 10.xxx</string>
    <string name="topup">Top Up</string>
    <string name="vou">Voucher</string>
    <string name="mitra">Mitra</string>
    <string name="seller">Seller</string>
    <string name="customer">Customer</string>
    <string name="scan">Kirim Uang</string>
    <string name="dekat">Pedagang terdekat</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="transaksi">Transaksi</string>
    <string name="tidak">Tidak</string>
    <string name="caritra">Cari Transaksi</string>
    <string name="waiting">Menunggu Pembayaran</string>
    <string name="nope">Tidak ada transaksi saat ini</string>
    <string name="account">Akun</string>
    <string name="nohp">08********52</string>
    <string name="profile">Profil Saya</string>
    <string name="keluarakun">Keluar Akun</string>
    <string name="keamanan">Keamanan Akun</string>
    <string name="struk">e-Receipt</string>
    <string name="suksesbayar">Pembayaran Sukses</string>
    <string name="gagalbayar">Pembayaran Gagal</string>
    <string name="referalkode">Kode Refferal</string>
    <string name="settingumum">Pengaturan Umum</string>
    <string name="helpdesk">Pusat Bantuan</string>
    <string name="whatreceh">Keuntungan Pakai Receh</string>
    <string name="chatreceh">Chat dengan Receh</string>
    <string name="prosestarik">Silahkan scan untuk melanjutkan proses pembayaran</string>
    <string name="uangtarik">Rp 15.000</string>
    <string name="printahscan">QRCode untuk scan</string>
    <string name="sellername">Nama seller</string>
    <string name="hargatv">Nominal</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="suksestarik">Penarikan Sukses</string>
    <string name="sebesar">Sebesar</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_selamat_datang">Selamat Datang</string>
    <string name="lbl_username">username</string>
    <string name="lbl_hanan_azhar">Hanan Azhar</string>
    <string name="msg_keuntungan_paka">Keuntungan Pakai Receh</string>
    <string name="lbl_proses_customer">Proses customer</string>
    <string name="lbl_penyetoran">Penyetoran</string>
    <string name="lbl_beranda">Beranda</string>
    <string name="lbl_voucher">Voucher</string>
    <string name="lbl_profil_saya">Profil Saya</string>
    <string name="msg_khusus_seller_m">khusus seller/mitra</string>
    <string name="lbl_cust_proses">cust - proses</string>
    <string name="lbl2">%</string>
    <string name="lbl_17_apr_2022">17 Apr 2022</string>
    <string name="lbl_masuk">Masuk</string>
    <string name="lbl_pengaturan_umum">Pengaturan Umum</string>
    <string name="lbl_lanjutkan">Lanjutkan</string>
    <string name="lbl_cust_scan">cust - scan</string>
    <string name="lbl_20_apr_2022">20 Apr 2022</string>
    <string name="lbl_keamanan_akun">Keamanan Akun</string>
    <string name="msg_penarikan_sukse">Penarikan Sukses</string>
    <string name="msg_kembali_ke_hala">Kembali ke halaman utama</string>
    <string name="msg_sisa_saldo_rp_1">Sisa Saldo
Rp 150.xxxxxx</string>
    <string name="mindOrks">MindOrks</string>
    <string name="after_academy">After Academy</string>
    <string name="user">User</string>
    <string name="msg_silahkan_isi_da">Silahkan isi data yang valid</string>
    <string name="msg_barcode_untuk_s">Barcode untuk scan</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_transaksi">Transaksi</string>
    <string name="lbl_berhasil">Berhasil</string>
    <string name="lbl_verifikasi">verifikasi</string>
    <string name="lbl_kode_referral">Kode Referral</string>
    <string name="lbl_penarikan">Penarikan</string>
    <string name="lbl_homepage">homepage</string>
    <string name="lbl_nama">Nama</string>
    <string name="lbl_splash_screen">Splash screen</string>
    <string name="lbl_sign_up">sign up</string>
    <string name="lbl_sisa_saldo">Sisa Saldo</string>
    <string name="lbl_receh">Receh</string>
    <string name="lbl_top_up">Top Up</string>
    <string name="msg_this_is_the_pre">this is the preferred form of payment integration for small merchants whose payments will be switched to non-cash. </string>
    <string name="lbl_seller">Seller</string>
    <string name="lbl_receh_is">Receh is </string>
    <string name="lbl_cust_success">cust- success</string>
    <string name="lbl">+</string>
    <string name="lbl_scan">Scan</string>
    <string name="msg_silahkan_scan_u">Silahkan scan untuk melanjutkan proses penarikan tunai anda</string>
    <string name="lbl_15_apr_2022">15 Apr 2022</string>
    <string name="lbl_mitra">Mitra</string>
    <string name="lbl_profil_saya2">Profil saya</string>
    <string name="lbl_pusat_bantuan">Pusat Bantuan</string>
    <string name="lbl_customer">Customer</string>
    <string name="lbl_sebesar">Sebesar</string>
    <string name="lbl_rp_15_000">Rp 15.000</string>
    <string name="msg_silahkan_lengka2">Silahkan lengkapi dibawah ini</string>
    <string name="msg_pedagang_terdek">Pedagang terdekat</string>
    <string name="lbl_rp_10_xxx">Rp 10.xxx</string>
    <string name="lbl_e_statement">e-Statement</string>
    <string name="msg_menunggu_pembay">Menunggu Pembayaran</string>
    <string name="lbl_pertanyaan">Pertanyaan Umum</string>
    <string name="msg_kode_autentifik">Kode Autentifikasi</string>
    <string name="lbl_rp_12_500">Rp 12.500</string>
    <string name="lbl_login">login </string>
    <string name="lbl_081_678">081********678</string>
    <string name="lbl_welcome_page">welcome page</string>
    <string name="msg_start_small_to"> Start small to make it easier together</string>
    <string name="lbl_25_apr_2022">25 Apr 2022</string>
    <string name="lbl_rp_5_000">Rp 5.000</string>
    <string name="lbl_harga">Harga</string>
    <string name="lbl_info_box">Info Box</string>
    <string name="lbl_koinku">Koinku</string>
    <string name="lbl_akun2">akun</string>
    <string name="msg_sudah_punya_aku">Sudah punya akun?</string>
    <string name="msg_pendapatan_bonu">Pendapatan Bonus</string>
    <string name="lbl_transaksi2">transaksi</string>
    <string name="lbl_anisha_shop">Anisha Shop</string>
    <string name="lbl_rp_500">Rp 500</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_daftar">Daftar</string>
    <string name="lbl_alamat_email">Alamat Email</string>
    <string name="lbl_rp_2_500">Rp 2.500</string>
    <string name="lbl_akun">Akun</string>
    <string name="msg_silahkan_lengka">Silahkan lengkapi data berikut</string>
    <string name="lbl_rp_150_xxx">Rp 150.xxx</string>
    <string name="lbl_cari_transaksi">Cari Transaksi</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="sellerandmitra">Daftar sebagai Mitra/Seller</string>
    <string name="nohp1">Nomor Handphone</string>
    <string name="min_password">"Gunakan minimal 8 karakter"</string>
    <string name="invalid_email">Email tidak valid!</string>
    <string name="scan_barcode_button" translatable="false">Scan Barcode</string>
    <string name="barcode_result" translatable="false">Barcode detected.\n%1$s</string>
    <string name="error_scanner_cancelled" translatable="false">Code scanner is cancelled.</string>
    <string name="error_camera_permission_not_granted" translatable="false">Camera permission is not granted.</string>
    <string name="error_app_name_unavailable" translatable="false">App name is not set.</string>
    <string name="error_default_message" translatable="false">Failed to scan code: %1$s</string>
    <string name="prototipe">Masih prototype</string>
    <string name="gantipic">Ganti Foto</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP?<b>Resend</b></string>
    <string name="emailmu">email anda</string>
    <string name="cw">©2022 Receh</string>
    <string name="version">Versi 1.0</string>
    <string name="qrcode">Terima Uang</string>
    <string name="pilihnom">Pilih nominal saldo</string>
    <string name="masukkanrp">Masukkan nominal lain</string>
    <string name="jumlah">Jumlah</string>
    <string name="backhome">Kembali ke halaman utama</string>
    <string name="topupsucc">Top-up Sukses</string>
    <string name="paysucc">Pembayaran Sukses</string>
    <string name="masukkanps">Masukkan kata sandi</string>
    <string name="e_receipt">E-Receipt</string>
    <string name="paydulu">Pembayaran</string>
    <string name="lokasi_mitra">Lokasi Mitra</string>
    <string name="lokasi_seller">Lokasi Seller</string>
    <string name="generate">Generate</string>
    <string name="opsi1">Rp 10.000</string>
    <string name="opsi2">Rp 25.000</string>
    <string name="opsi3">Rp 50.000</string>
    <string name="opsi4">Rp 100.000</string>
    <string name="opsi5">Rp 200.000</string>
    <string name="opsi6">Rp 500.000</string>
    <string name="top_up_sukses">Top up Sukses</string>
    <string name="jumlah_harga">Jumlah harga</string>
    <string name="jumlahuang">Rp. xxx.xxx</string>
    <string name="metode">Metode Pembayaran</string>
    <string name="pilihmetode">Pilih Metode Pembayaran</string>
    <string name="mitra_receh">Mitra Receh</string>
    <string name="indomaret">Indomaret (Belum tersedia)</string>
    <string name="alfamart">Alfamart (Belum tersedia)</string>
    <string name="atm">ATM (Belum tersedia)</string>
    <string name="va">Virtual Account Billing (Belum tersedia)</string>
    <string name="camerax_entry_title">CameraX</string>
    <string name="dce_entry_title">Dynamsoft Camera Enhancer</string>
    <string name="zoom_default">Zoom ratio: 1.0</string>
    <string name="title_menu_1">Selamat Datang di Receh!</string>
    <string name="desc_menu_1">Aplikasi keuangan yang bisa bikin transaksi kamu jadi lebih mudah, aman dan menyenangkan.</string>
    <string name="title_menu_2">Bayar Ini itu, Lebih murah</string>
    <string name="desc_menu_2">Jajan makanan di kaki lima hingga bayar transaksi apapun lebih irit</string>
    <string name="desc_menu_3">Lebih Mudah Tanpa Dompet</string>
    <string name="title_menu_3">Kini bisa transaksi dan isi saldo lebih mudah, tarik tunai tanpa ATM juga bisa!</string>
    <string name="desc_menu_4">Traksansi mudah dan aman dengan scan QR CODE</string>
    <string name="title_menu_4">Mudah dan aman dengan QR CODE</string>
    <string name="typetransaksi">Penarikan</string>
    <string name="pertanyaan1">Sebelum mendaftar akun di Receh, pastikan kamu memiliki alamat email yang valid dan nomor telpon yang aktif. pendaftaran akun dapat dilakukan di halaman awal Receh, dengan mengklik daftar. Kemudian isi kolom tersedia, seperti memasukan nama, alamat email, password, dan lainnya. Lalu masukan nomor telpon kamu dan tekan kirim kode otp untuk mendapatkan sms yang berisi enam angka. Selanjutnya masukan kode otp yang kamu dapat dan klik submit. sekarang akunmu sudah selesai dibuat, silahkan log in!</string>
    <string name="pertanyaan2">Saldo adalah uang elektronik milik kamu pada aplikasi Receh yang dapat digunakan untuk melakukan transaksi pada aplikasi Receh, termasuk untuk melakukan transfer dana dan melakukan pembayaran produk yang beli dari seller Receh.</string>
</resources>