<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lsemibold"
        android:text="@string/nama"
        android:textColor="@color/brown"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/notif"
        android:src="@drawable/notif"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/uidata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular"
            android:text="@string/bal"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/actbal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/activebal"

            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="@+id/balance"
            app:layout_constraintTop_toBottomOf="@+id/balance" />

        <TextView
            android:id="@+id/incbonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/regular"
            android:text="@string/income"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/actbal"
            app:layout_constraintTop_toBottomOf="@+id/actbal" />

        <TextView
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/incomebonus"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/balance"
            app:layout_constraintTop_toBottomOf="@+id/incbonus" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/scan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/iconbutton"
        android:fontFamily="@font/regular"
        android:letterSpacing="0"
        android:orientation="vertical"
        android:text="@string/scan"
        android:textAllCaps="false"
        app:icon="@drawable/scan"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Topup" />

    <Button
        android:id="@+id/near"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/iconbutton"
        android:fontFamily="@font/regular"
        android:letterSpacing="0"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="14dp"
        android:text="@string/msg_pedagang_terdek"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:icon="@drawable/lokasi"
        app:iconGravity="start"
        app:iconSize="35dp"
        app:layout_constraintEnd_toEndOf="@+id/scan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Voucher"
        app:layout_constraintTop_toBottomOf="@+id/Topup">

    </Button>

    <Button
        android:id="@+id/qna"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/iconbutton"
        android:fontFamily="@font/regular"
        android:letterSpacing="0"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:text="@string/pertanyaan"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:icon="@drawable/tanya"
        app:iconSize="35dp"
        app:layout_constraintEnd_toEndOf="@+id/near"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/near"
        app:layout_constraintTop_toBottomOf="@+id/near" />

    <Button
        android:id="@+id/Voucher"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/iconbutton"
        android:fontFamily="@font/regular"
        android:insetTop="2dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
        android:paddingRight="1dp"
        android:text="@string/lbl_voucher"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:icon="@drawable/voucher"
        app:iconGravity="textTop"
        app:iconPadding="8dp"
        app:iconSize="45dp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/Topup"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/Topup"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/iconbutton"
        android:fontFamily="@font/regular"
        android:insetTop="2dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
        android:paddingRight="1dp"
        android:text="@string/topup"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:icon="@drawable/union"
        app:iconGravity="textTop"
        app:iconPadding="10dp"
        app:iconSize="45dp"
        app:layout_constraintEnd_toStartOf="@+id/scan"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/Voucher"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>