<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.metode.MetodePembayaranActivity">


    <ImageButton
        android:id="@+id/backku"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:src="@drawable/img_vector_84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/brown" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/regular"
        android:text="@string/metode"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/backku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/backku"
        app:layout_constraintTop_toTopOf="@+id/backku" />

    <TextView
        android:id="@+id/tvjumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/regular"
        android:text="@string/jumlah_harga"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/jumlahuang"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvjumlah"
        app:layout_constraintStart_toStartOf="@+id/tvjumlah"
        app:layout_constraintTop_toBottomOf="@+id/tvjumlah" />


    <TextView
        android:id="@+id/tvpilihmet"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/regular"
        android:text="@string/pilihmetode"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jumlah" />

    <Button
        android:id="@+id/mitrareceh"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/metode"
        android:backgroundTintMode="src_atop"
        android:letterSpacing="0"
        android:paddingStart="25sp"
        android:text="@string/mitra_receh"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/lightorange"
        app:layout_constraintEnd_toEndOf="@+id/tvpilihmet"
        app:layout_constraintStart_toStartOf="@+id/tvpilihmet"
        app:layout_constraintTop_toBottomOf="@+id/tvpilihmet"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/indomaret"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/metode"
        android:backgroundTintMode="src_atop"
        android:letterSpacing="0"
        android:paddingStart="25sp"
        android:text="@string/indomaret"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/lightgray"
        app:layout_constraintEnd_toEndOf="@+id/mitrareceh"
        app:layout_constraintStart_toStartOf="@+id/mitrareceh"
        app:layout_constraintTop_toBottomOf="@+id/mitrareceh"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/alfamart"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/metode"
        android:backgroundTintMode="src_atop"
        android:letterSpacing="0"
        android:paddingStart="25sp"
        android:text="@string/alfamart"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/lightorange"
        app:layout_constraintEnd_toEndOf="@+id/indomaret"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/indomaret"
        app:layout_constraintTop_toBottomOf="@+id/indomaret"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/atm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/metode"
        android:backgroundTintMode="src_atop"
        android:letterSpacing="0"
        android:paddingStart="25sp"
        android:text="@string/atm"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/lightgray"
        app:layout_constraintEnd_toEndOf="@+id/alfamart"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/alfamart"
        app:layout_constraintTop_toBottomOf="@+id/alfamart"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/va"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/metode"
        android:backgroundTintMode="src_atop"
        android:letterSpacing="0"
        android:paddingStart="25sp"
        android:text="@string/va"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/lightorange"
        app:layout_constraintEnd_toEndOf="@+id/alfamart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/atm"
        app:layout_constraintTop_toBottomOf="@+id/atm"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>