<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.topup.SuksesTopupActivity"
    android:background="@color/brown">

    <Button
        android:id="@+id/backh"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/iconbutton"
        android:letterSpacing="0"
        android:text="@string/backhome"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rupiah" />

    <Button
        android:id="@+id/estruk"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/iconbutton"
        android:letterSpacing="0"
        android:text="@string/struk"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backh"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/backh"
        app:layout_constraintTop_toBottomOf="@+id/backh"
        app:layout_constraintVertical_bias="0.087" />

    <ImageView
        android:id="@+id/checklistok"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="126dp"
        android:src="@drawable/img_tickmarkcircl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/suksestarik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/top_up_sukses"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/checklistok"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/checklistok"
        app:layout_constraintTop_toBottomOf="@+id/checklistok" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/sebesar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/suksestarik"
        app:layout_constraintStart_toStartOf="@+id/suksestarik"
        app:layout_constraintTop_toBottomOf="@+id/suksestarik" />

    <TextView
        android:id="@+id/rupiah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/uangtarik"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</androidx.constraintlayout.widget.ConstraintLayout>