<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/lightgray"
            android:paddingStart="20dp"
            android:text="@string/lbl_15_apr_2022"
            android:textColor="@color/black"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/jenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/typetransaksi"
            android:textColor="@color/black"
            android:textSize="20sp"
            card_view:layout_constraintStart_toStartOf="@+id/tanggal"
            card_view:layout_constraintTop_toBottomOf="@+id/tanggal" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_berhasil"
            android:textColor="@color/black"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/jenis"
            card_view:layout_constraintTop_toBottomOf="@+id/jenis" />

        <TextView
            android:id="@+id/duit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/lbl_rp_15_000"
            android:textColor="@color/black"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/status"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/jenis"
            card_view:layout_constraintVertical_bias="0.971" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>